privatebin/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: privatebin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: privatebin-redirect@kubernetescrd
spec:
  tls:
  - secretName: privatebin-cert
  rules:
  - host: bin.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: privatebin
             port:
               number: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: privatebin
spec:
  redirectScheme:
    scheme: https
    permanent: true
